# IQM

./: .gitignore  CMakeLists.txt  README.md  bench.sh  compile_shaders.sh
shaders/: fsim_angular.glsl  fsim_downsample.glsl  fsim_extractluma.glsl  fsim_filter_combinations.glsl  fsim_filter_noise.glsl  fsim_gradientmap.glsl  fsim_log_gabor.glsl  fsim_lowpassfilter.glsl  fsim_mult_filters.glsl  fsim_phase_congruency.glsl  fsim_sum_filter_responses.glsl  ssim.glsl  ssim_gaussinput.glsl  ssim_lumapack.glsl  svd.glsl
shaders/flip/: combine_error_maps.glsl  feature_detection.glsl  feature_filter.glsl  feature_filter_horizontal.glsl  feature_filter_normalize.glsl  spatial_detection.glsl  spatial_filter_create.glsl  spatial_filter_normalize.glsl  spatial_prefilter.glsl  spatial_prefilter_horizontal.glsl  srgb_to_ycxcz.glsl
shaders/fsim/: fsim_downsample.glsl  fsim_extractluma.glsl  fsim_filter_combinations.glsl  fsim_final_multiply.glsl  fsim_final_sum.glsl  fsim_gradientmap.glsl  fsim_log_gabor.glsl  fsim_lowpassfilter.glsl  fsim_noise_energy_sum.glsl  fsim_pack_for_median.glsl  fsim_phase_congruency.glsl
shaders/ssim/: ssim.glsl  ssim_gaussinput.glsl  ssim_lumapack.glsl
shaders/svd/: svd.glsl
src/: args.cpp  args.h  debug_utils.h  input_image.h  main.cpp  methods.cpp  methods.h  profile.cpp  timestamps.h
src/cpu/: cw_ssim_ref.cpp  cw_ssim_ref.h  ssim_ref.cpp  ssim_ref.h
src/gpu/: fsim.cpp  fsim.h  img_params.h  ssim.cpp  ssim.h  svd.cpp  svd.h
src/gpu/base/: vulkan_image.h  vulkan_runtime.cpp  vulkan_runtime.h
src/gpu/flip/: CMakeLists.txt  flip.cpp  flip.h  flip_color_pipeline.cpp  flip_color_pipeline.h  viridis.h
src/gpu/fsim/: CMakeLists.txt  fsim.cpp  fsim.h
src/gpu/fsim/steps/: fsim_angular_filter.cpp  fsim_angular_filter.h  fsim_estimate_energy.cpp  fsim_estimate_energy.h  fsim_filter_combinations.cpp  fsim_filter_combinations.h  fsim_final_multiply.cpp  fsim_final_multiply.h  fsim_log_gabor.cpp  fsim_log_gabor.h  fsim_lowpass_filter.cpp  fsim_lowpass_filter.h  fsim_noise_power.cpp  fsim_noise_power.h  fsim_phase_congruency.cpp  fsim_phase_congruency.h  fsim_sum_filter_responses.cpp  fsim_sum_filter_responses.h
src/gpu/ssim/: CMakeLists.txt  ssim.cpp  ssim.h
src/gpu/svd/: CMakeLists.txt  svd.cpp  svd.h
